--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
         <button id="table-addrow">Add new row</button>
         <button id="table-delrow">Remove selected rows</button>
         <button id="table-clear">Clear table</button>
-        <button id="table-download">Download CSV</button>
+        <button id="table-download">Download JSON</button>
     </div>
     <div id="input-table"></div>
 
